tests/auto/qml/qmlcppcodegen/data/invisibleTypes.qml
@@ -1,0 +1,8 @@
+import QtQml
+import TestTypes
+
+QtObject {
+    property var singleton: SingletonModel
+    property var attached: AttachedObject
+    property var metaobject: DerivedFromInvisible
+}
